--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/assets/ICON.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + HeroUI</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <title>Ferokod - Obrt za proizvodnju i usluge</title>
+    <meta key="title" content="Ferokod - Obrt za proizvodnju i usluge" property="og:title" />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="Usluge izrade kapija, dvorišnih i balkonskih ograda, željezne ili aluminijske ograde, svih vrsta, oblika i tipova."
       property="og:description"
     />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="Usluge izrade kapija, dvorišnih i balkonskih ograda, željezne ili aluminijske ograde, svih vrsta, oblika i tipova."
       name="description"
     />
     <meta
